@@ -1,3 +1,7 @@
+2001-12-05  Tim Jenness  <t.jenness@jach.hawaii.edu>
+
+	* Group.pm (subgrp): Try to use a numeric comparison if we have a number.
+
 2001-12-04  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Index.pm (slurpindex): Support arrays and hashes
